--- a/styles.css
+++ b/styles.css
@@ -275,7 +275,7 @@ header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-content: center;
-  justify-items: center; 
+  justify-items: center;
   grid-gap: 20px;
 }
 
@@ -300,7 +300,7 @@ header {
 
 .about-content {
   display: grid;
-    align-content: stretch;
+  align-content: stretch;
 }
 
 .footer {
@@ -317,6 +317,67 @@ header {
   font-size: 1.2rem;
 }
 
+.contact-wrapper {
+  height: 100vh;
+  background: url("./assets/images/gray.jpg") no-repeat;
+  background-size: cover;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50%;
+  padding: 0 20px;
+}
+
+.contact-form {
+  max-width: 550px;
+  margin: 0 auto;
+  background: rgba(0, 0, 0, 0.8);
+  padding: 30px;
+  border-radius: 12px;
+  display: flex;
+}
+
+.input-fields {
+  display: flex;
+  flex-direction: column;
+  margin-right: 4%;
+}
+
+.input-fields,
+.message {
+  width: 48%;
+}
+
+.input-fields .input,
+.message textarea {
+  margin: 10px 0;
+  background: transparent;
+  border: 0;
+  border-bottom: 2px solid #c5ecfd;
+  width: 100%;
+  outline: none;
+}
+
+.message textarea {
+  height: 128px;
+}
+
+.btn {
+  background: crimson;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  border-radius: 12px;
+  color: #fff;
+  padding: 15px;
+}
 
 @media screen and (max-width: 1000px) {
   .hero-clipped {
@@ -355,6 +416,31 @@ header {
   .cta-btn {
     padding: 1rem 2.5rem;
   }
+
+  .contact-form {
+    flex-direction: column;
+  }
+
+  .message textarea {
+    height: 80px;
+  }
+
+  .input-fields,
+  .message {
+    width: 100%;
+  }
+
+  .wrapper {
+    width: 90%;
+  }
+
+  .background-image {
+    background-position: right;
+  }
+
+  .grid-3 {
+    padding: 240px 10px;
+  }
 }
 
 @media screen and (max-width: 550px) {
@@ -371,11 +457,9 @@ header {
   }
 
   .grid-3 {
-  grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .grid-2 {
+    grid-template-columns: 1fr;
+  }
 }
-.grid-2 {
-  grid-template-columns: 1fr;
- 
-}
-}
-
